# ai

./: Cargo.toml  README.md  index.html  install.sh  uninstall.sh
.forgejo/workflows/: publish.yml
.github/workflows/: mirror.yaml  publish.yml
src/: main.rs
website/: index.html  install.sh
