[package]
name = "airun"
version = "0.3.2"
edition = "2021"
description = "Launch any AI CLI in seconds"
license = "AGPL-3.0-only"
repository = "https://codeberg.org/thomasboom/AIRun/"
homepage = "https://thomasboom.codeberg.page/AIRun/"

[[bin]]
name = "airun"
path = "src/main.rs"

[dependencies]
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
anyhow = "1.0"
which = "6.0"
colored = "2.1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
